navbar alignement/color fixed, main intro image fixed

--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ h1{
   height: 40px;
   padding: 5px 5px;
   position: fixed;
-  background-color: rgb(44, 43, 43);
+  background-color: rgba(245, 245, 245, 0.521);
   left: 0;
   top: 0;
   overflow: hidden;
@@ -109,9 +109,9 @@ h1{
 
 #header.header-scrolled,
 #header.header-fixed {
-  background: rgb(31, 30, 30);
-  height: 65px;
-  padding: 0px 0;
+  background: rgb(220, 228, 217);
+  height: 40px;
+  padding: 5px 5px;
   transition: all 0.5s;
 }
 /* 
@@ -139,7 +139,7 @@ h1{
   padding: 10px;
   margin: 10px;
   position: fixed;
-  top: -10px;
+  top: -11px;
   max-height: 40px;
 }
 
@@ -219,7 +219,7 @@ h1{
   padding: 8px;
   text-decoration: none;
   display: inline-block;
-  color: rgba(202, 206, 221, 0.8);
+  color: rgba(37, 37, 37, 0.8);
   font-family: "Raleway", sans-serif;
   font-weight: 600;
   font-size: 14px;
@@ -228,7 +228,7 @@ h1{
 
 .nav-menu .menu-active a,
 .nav-menu a:hover {
-  color: #fff;
+  color: rgb(15, 15, 15);
 }
 
 .nav-menu > li {
@@ -280,7 +280,7 @@ h1{
 .nav-menu ul {
   margin: 4px 0 0 0;
   padding: 10px;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+  box-shadow: 0px 0px 30px rgba(85, 134, 250, 0.897);
   background: #fff;
   border-radius: 3px;
 }
@@ -315,10 +315,10 @@ h1{
   right: 0;
   top: 0;
   z-index: 999;
-  margin: 15px 15px 0 0;
+  margin: 4px 15px 0 0;
   border: 0;
   background: none;
-  font-size: 24px;
+  font-size: 30px;
   display: none;
   transition: all 0.4s;
   outline: none;
@@ -326,7 +326,10 @@ h1{
 }
 
 #mobile-nav-toggle i {
-  color: #fff;
+  color: rgb(23, 25, 26);
+  
+  padding: 0 5px 0 0;
+  margin: 0 5px 0 0;
 }
 
 /* Mobile Nav Styling */
@@ -337,7 +340,8 @@ h1{
   padding-top: 18px;
   bottom: 0;
   z-index: 998;
-  background: rgba(6, 12, 34, 0.9);
+  background: rgba(5, 5, 5, 0.9);
+  background: linear-gradient(to bottom, rgb(17, 17, 17),rgba(0, 0, 0, 0.705));
   left: -260px;
   width: 260px;
   overflow-y: auto;
@@ -348,10 +352,13 @@ h1{
   padding: 0;
   margin: 0;
   list-style: none;
+ 
 }
 
 #mobile-nav ul li {
   position: relative;
+  background-color: rgba(39, 38, 38, 0.068);
+  margin: 4px 0;
 }
 
 #mobile-nav ul li a {
@@ -367,7 +374,7 @@ h1{
 }
 
 #mobile-nav ul li a:hover {
-  color: #f82249;
+  color: #f82222;
 }
 
 #mobile-nav ul li li {
@@ -398,7 +405,7 @@ h1{
   top: 0;
   left: 0;
   position: fixed;
-  background: rgba(88, 89, 90, 0.8);
+  background: rgba(28, 29, 29, 0.349);
   display: none;
 }
 
@@ -649,17 +656,27 @@ body.mobile-nav-active #mobile-nav-toggle {
   }
 
   .nav-menu a {
-    padding: 8px 4px;
+    padding: 10px 4px;
   }
 }
 
 @media (max-width: 991px) {
   #header {
-    background: rgb(32, 32, 32);
-    height: 70px;
-    padding: 15px 0;
+   background-color: rgba(212, 205, 205, 0.274);
+    /* background: linear-gradient(to bottom, rgba(26, 25, 25, 0.788), rgba(128, 128, 128, 0.178)); */
+    height: 40px;
+    padding: 10px 0;
     transition: all 0.5s;
   }
+  
+#header.header-scrolled,
+#header.header-fixed {
+  background: rgba(171, 194, 171, 0.93);
+  /* background: linear-gradient(to bottom, rgb(120,120,120) 0%,rgba(100, 100, 100, 0.096) 100%); */
+  height: 40px;
+  padding: 5px 5px;
+  transition: all 0.5s;
+}
 
   #nav-menu-container {
     display: none;
@@ -726,5 +743,5 @@ body.mobile-nav-active #mobile-nav-toggle {
 @media (max-width: 991px) {
   #header #logo img {
     position: fixed;
-    top: 16px;
+    top: -12px;
   }}
